# pip_fluigIO

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
pip_fluigio/__fluig_services_base/: card.py  dataset.py  token.py  workflow_engine.py
pip_fluigio/__fluig_services_base/interfaces/: card.py  dataset.py  workflow_engine.py
pip_fluigio/adapters/: card.py  dataset.py  workflow_engine.py
pip_fluigio/fluig_services/: card.py  dataset.py  token.py  workflow_engine.py
pip_fluigio/fluig_services/infraestruture/: server.py
pip_fluigio/utils/: commomns.py  exceptions.py  logger.py
site/: 404.html  index.html  sitemap.xml
utils/: logger.py
