[tool.poetry]
name = "pip_fluigio"
version = "0.1.0"
description = "abstratct library  services plataform fluig"
authors = ["Rodrigo Becker <rodrigo.beckermore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
pydantic = "^1.10.2"
loguru = "^0.6.0"
mkdocs = "^1.4.0"
black = "^22.10.0"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
