[tool.poetry]
name = "pip_fluigio"
version = "0.2.2"
description = "abstratct library  services soap plataform fluig"
authors = ["Rodrigo Becker <rodrigo.beckermore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
loguru = "^0.6.0"
zeep = "^4.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^22.10.0"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [{ include = "src" }]
